part1/1.11/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-log
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /log
