part1/1.11/manifests/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: writer
          image: tripplen63/log-output:1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
        - name: reader
          image: tripplen63/log-output:1.11
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
