part1/1.11/manifests/deployment-ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: ping-pong
          image: tripplen63/ping-pong:1.11
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
