part1/1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
  labels:
    app: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
