part1/1.11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  labels:
    app: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix-log@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: log-output
                port:
                  number: 3000
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  number: 3000
